2009-05-13  Larry Ewing  <lewing@novell.com>

	* ItemsControl.cs: access the Property not the member to avoid a
	crash.

2009-05-13  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Measure needs to be invalidated every
	  time the Content or ContentTemplate changes, not just when
	  we alter the root visual.

2009-05-12  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: ItemsControl has the same behaviour as
	  ContentPresenter - the DataContext property is only set if
	  the item is *not* a framework element.

2009-05-12  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: ContentPresenter copies Content to
	  DataContext iff the Content is not a FrameworkElement.

2009-05-12  Jeffrey Stedfast  <fejj@novell.com>

	* TextBox.cs (OnCursorPositionChanged): Fixed scrolling to behave
	more normally. Might still need some work, but at least it's no
	longer painful. I'm sure toshok will be appreciative ;-)

2009-05-12  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs:
	* ItemCollection.cs: The ItemsCollection should be
	  instantiated once and reused even when the ItemsSource
	  changes. When ItemsSource is non-null, we don't propagate
	  collection changed events.

2009-05-11  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Whenever the content root is changed,
	  we need to invalidate the measure so that the presenter
	  refreshes properly.

2009-05-11  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Recommit r133738 as it's not causing
	  the timeouts.

2009-05-11  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Recommit r133724/5 as it isn't causing
	  the timeouts.

2009-05-11  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs:
	* ContentPresenter.cs: When a container is autogenerated, we
	  copy the Content to the DataContext.

2009-05-11  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Back out r133724/5 in case it's what