@@ -1,5 +1,12 @@
 2009-05-13  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows.Controls/ItemsControlTest.cs: When the items
+	  collection is databound, we need to copy all the items from
+	  the ItemsSource into the Items collection before firing the
+	  Reset event.
+
+2009-05-13  Alan McGovern  <amcgovern@novell.com>
+
 	* System.Windows.Data/BindingTest.cs: If we have a property
 	  path like "A.B.C" and the object 'B' is null, we should bail
 	  out with failure.
